--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/toastTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_13sdp"
+                android:layout_marginHorizontal="@dimen/_13sdp"
                 android:layout_weight="1"
                 android:text=""
                 android:textColor="@color/white"
