--- a/app/src/main/res/layout/activity_fees.xml
+++ b/app/src/main/res/layout/activity_fees.xml
@@ -74,8 +74,8 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_5sdp"
                     android:layout_margin="@dimen/_1sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
                     android:elevation="0dp"
                     app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="@dimen/_10sdp">
@@ -98,12 +98,12 @@
                                 android:layout_marginStart="@dimen/_10sdp"
                                 android:fontFamily="@font/opensans_regular"
                                 android:singleLine="true"
-                                android:text="@string/sale_order_token"
+                                android:text="@string/sale_order_eCommerce"
                                 android:textColor="@color/xdark_gray"
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-                                android:id="@+id/salesOrderDollTV"
+                                android:id="@+id/salesOrderEcomDollTV"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -114,7 +114,47 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-                                android:id="@+id/salesOrderPerTV"
+                                android:id="@+id/salesOrderEcomPerTV"
+                                android:layout_width="@dimen/_50sdp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginEnd="@dimen/_23sdp"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:gravity="end"
+                                android:singleLine="true"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_11ssp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_7sdp"
+                            android:layout_marginBottom="@dimen/_10sdp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:fontFamily="@font/opensans_regular"
+                                android:singleLine="true"
+                                android:text="@string/sale_order_Retail_Mobile"
+                                android:textColor="@color/xdark_gray"
+                                android:textSize="@dimen/_11ssp" />
+
+                            <TextView
+                                android:id="@+id/salesOrderRetailDollTV"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:gravity="end"
+                                android:singleLine="true"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_11ssp" />
+
+                            <TextView
+                                android:id="@+id/salesOrderRetailPerTV"
                                 android:layout_width="@dimen/_50sdp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="@dimen/_23sdp"
@@ -188,8 +228,8 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_5sdp"
                     android:layout_margin="@dimen/_1sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
                     android:elevation="0dp"
                     app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="@dimen/_10sdp">
@@ -463,6 +503,7 @@
 
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -470,11 +511,11 @@
                 android:layout_marginTop="@dimen/_3sdp"
                 android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:elevation="0dp"
                     android:layout_margin="@dimen/_1sdp"
+                    android:elevation="0dp"
                     app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="@dimen/_10sdp">
 
@@ -645,9 +686,9 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_1sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:elevation="0dp"
-                    android:layout_margin="@dimen/_1sdp"
                     app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="@dimen/_10sdp">
 
