--- a/app/src/main/res/layout/batch_payouts_dashboard.xml
+++ b/app/src/main/res/layout/batch_payouts_dashboard.xml
@@ -26,17 +26,17 @@
                 android:textColor="@color/dark_grey"
                 android:textSize="@dimen/_10ssp" />
 
-            <TextView
-                android:id="@+id/payoutManualTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:fontFamily="@font/opensans_regular"
-                android:text="@string/manual"
-                android:textColor="@color/primary_green"
-                android:textSize="@dimen/_10ssp"
-                android:visibility="gone"
-                />
+<!--            <TextView-->
+<!--                android:id="@+id/payoutManualTV"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="@dimen/_5sdp"-->
+<!--                android:fontFamily="@font/opensans_regular"-->
+<!--                android:text="@string/manual"-->
+<!--                android:textColor="@color/primary_green"-->
+<!--                android:textSize="@dimen/_10ssp"-->
+<!--                android:visibility="gone"-->
+<!--                />-->
 
             <LinearLayout
                 android:layout_width="wrap_content"
