--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -1120,32 +1120,31 @@
 
                             </LinearLayout>
 
-                            <androidx.cardview.widget.CardView
-                                android:id="@+id/cv_batch_now"
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/_42sdp"
-                                android:layout_marginLeft="@dimen/_68sdp"
-                                android:layout_marginRight="@dimen/_77sdp"
-                                app:cardBackgroundColor="@color/inactive_color"
-                                app:cardCornerRadius="@dimen/_21sdp">
+<!--                            <androidx.cardview.widget.CardView-->
+<!--                                android:id="@+id/cv_batch_now"-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="@dimen/_42sdp"-->
+<!--                                android:layout_marginLeft="@dimen/_68sdp"-->
+<!--                                android:layout_marginRight="@dimen/_77sdp"-->
+<!--                                app:cardBackgroundColor="@color/inactive_color"-->
+<!--                                app:cardCornerRadius="@dimen/_21sdp">-->
 
-                                <TextView
-                                    android:id="@+id/dashboard_TV1"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:fontFamily="@font/opensans_bold"
-                                    android:text="@string/batchnow"
-                                    android:textColor="@color/white"
-                                    android:textSize="@dimen/_12ssp" />
-                            </androidx.cardview.widget.CardView>
+<!--                                <TextView-->
+<!--                                    android:id="@+id/dashboard_TV1"-->
+<!--                                    android:layout_width="wrap_content"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:layout_gravity="center"-->
+<!--                                    android:fontFamily="@font/opensans_bold"-->
+<!--                                    android:text="@string/batchnow"-->
+<!--                                    android:textColor="@color/white"-->
+<!--                                    android:textSize="@dimen/_12ssp" />-->
+<!--                            </androidx.cardview.widget.CardView>-->
 
                             <LinearLayout
                                 android:id="@+id/payoutsLayoutLL"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginHorizontal="@dimen/_11sdp"
-                                android:layout_marginTop="@dimen/_22sdp"
                                 android:layout_weight="1"
                                 android:orientation="vertical" />
 
