--- a/app/src/main/res/layout/authorization_failed.xml
+++ b/app/src/main/res/layout/authorization_failed.xml
@@ -5,56 +5,68 @@
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <ImageView
-        android:id="@+id/failedIV"
+        android:id="@+id/ivBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/_101sdp"
-        android:layout_marginBottom="@dimen/_35sdp"
-        android:contentDescription="@string/to_token_account"
-        android:src="@drawable/ic_failed" />
-
-    <TextView
-        android:id="@+id/tvAFailed"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:fontFamily="@font/opensans_bold"
-        android:text="Authorization Failed"
-        android:layout_below="@+id/failedIV"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_16ssp" />
-
-    <TextView
-        android:id="@+id/tvMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvAFailed"
-        android:layout_marginTop="@dimen/_21sdp"
-        android:layout_marginBottom="@dimen/_21sdp"
-        android:fontFamily="@font/opensans_regular"
-        android:lineHeight="@dimen/_21ssp"
-        android:text="@string/card_authorization_failed"
-        android:textAlignment="center"
-        android:textColor="@color/primary_black"
-        android:textSize="@dimen/_12ssp" />
-    <TextView
-        android:id="@+id/tvMessageLine"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvMessage"
-        android:layout_marginStart="@dimen/_21sdp"
-        android:layout_marginEnd="@dimen/_21sdp"
-        android:fontFamily="@font/opensans_regular"
-        android:textAlignment="center"
-        android:lineHeight="@dimen/_21sdp"
-        android:text="@string/card_authorization_failed"
-        android:textColor="@color/primary_black"
-        android:textSize="@dimen/_12ssp"
+        android:contentDescription="@string/back_button"
+        android:src="@drawable/ic_close"
+        android:layout_marginTop="@dimen/_37sdp"
+        android:layout_marginStart="@dimen/_13sdp"
+        android:padding="@dimen/_8sdp"
         android:visibility="gone"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/failedIV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_35sdp"
+            android:contentDescription="@string/to_token_account"
+            android:src="@drawable/ic_failed" />
+
+        <TextView
+            android:id="@+id/tvAFailed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_bold"
+            android:text="@string/authorization_failed"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp" />
+
+        <TextView
+            android:id="@+id/tvMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_21sdp"
+            android:fontFamily="@font/opensans_regular"
+            android:lineHeight="@dimen/_21ssp"
+            android:text="@string/card_authorization_failed"
+            android:textAlignment="center"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_12ssp" />
+
+        <TextView
+            android:id="@+id/tvMessageLine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginEnd="@dimen/_21sdp"
+            android:fontFamily="@font/opensans_regular"
+            android:lineHeight="@dimen/_21sdp"
+            android:text="@string/card_authorization_failed"
+            android:textAlignment="center"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_12ssp"
+            android:visibility="gone" />
+
+    </LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvTryAgain"
@@ -66,18 +78,18 @@
         android:gravity="center"
         app:cardBackgroundColor="@color/primary_green"
         app:cardCornerRadius="@dimen/_21sdp"
-        android:layout_marginBottom="@dimen/_32sdp">
+        android:layout_marginBottom="@dimen/_27sdp">
 
         <TextView
+            android:id="@+id/tvButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/opensans_bold"
             android:gravity="center"
-            android:text="Try Again"
+            android:text="@string/try_again"
             android:textColor="@color/white"
             android:textSize="@dimen/_12ssp" />
     </androidx.cardview.widget.CardView>
-
 
 </RelativeLayout>
