--- a/app/src/main/res/layout/merchant_transactions_filter.xml
+++ b/app/src/main/res/layout/merchant_transactions_filter.xml
@@ -188,6 +188,52 @@
 
             </LinearLayout>
 
+<!--                <TextView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="@dimen/_15sdp"-->
+<!--                    android:layout_marginBottom="@dimen/_12sdp"-->
+<!--                    android:fontFamily="@font/opensans_semibold"-->
+<!--                    android:text="Transaction Sub Type"-->
+<!--                    android:textColor="@color/primary_black"-->
+<!--                    android:textSize="@dimen/_11ssp" />-->
+
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginBottom="@dimen/_8sdp"-->
+<!--                    android:orientation="horizontal">-->
+
+<!--                    <com.google.android.material.chip.Chip-->
+<!--                        android:id="@+id/transSubTypeEcommerce"-->
+<!--                        style="@style/Widget.MaterialComponents.Chip.Choice"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginRight="@dimen/_10sdp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:fontFamily="@font/opensans_semibold"-->
+<!--                        android:text="eCommerce"-->
+<!--                        android:textAlignment="center"-->
+<!--                        android:textColor="@color/chip_text_color"-->
+<!--                        android:textSize="@dimen/_11ssp"-->
+<!--                        app:chipBackgroundColor="@color/chipbackgroundcolor"-->
+<!--                        app:chipMinHeight="@dimen/_32sdp" />-->
+
+<!--                    <com.google.android.material.chip.Chip-->
+<!--                        android:id="@+id/transSubTypeRetail"-->
+<!--                        style="@style/Widget.MaterialComponents.Chip.Choice"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:fontFamily="@font/opensans_semibold"-->
+<!--                        android:text="Retail / Mobile"-->
+<!--                        android:textAlignment="center"-->
+<!--                        android:textColor="@color/chip_text_color"-->
+<!--                        android:textSize="@dimen/_11ssp"-->
+<!--                        app:chipBackgroundColor="@color/chipbackgroundcolor"-->
+<!--                        app:chipMinHeight="@dimen/_32sdp" />-->
+
+<!--                </LinearLayout>-->
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_15sdp"
