--- a/app/src/main/res/layout/activity_dba_information.xml
+++ b/app/src/main/res/layout/activity_dba_information.xml
@@ -501,7 +501,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Upload DBA filling (Optional)"
+                        android:text="Upload DBA filling"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_10ssp"
                         android:visibility="visible" />
