--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -593,7 +593,7 @@
                         android:id="@+id/websiteLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:orientation="vertical">
 
                         <TextView
@@ -602,7 +602,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/_1sdp"
                             android:fontFamily="@font/opensans_regular"
-                            android:text=""
+                            android:text="Website (Optional)"
                             android:textColor="@color/dark_grey"
                             android:textSize="@dimen/_11ssp" />
 
@@ -1310,6 +1310,7 @@
                     android:fontFamily="@font/opensans_regular"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp"
+                    android:visibility="gone"
                     android:theme="@style/AppTheme" />
 
                 <!--                <TextView-->
@@ -1358,7 +1359,7 @@
                     android:fontFamily="@font/opensans_regular"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
             </LinearLayout>
 
 
@@ -1379,7 +1380,7 @@
                     android:gravity="center"
                     android:paddingTop="@dimen/_13sdp"
                     android:paddingBottom="@dimen/_13sdp"
-                    android:text="Submit"
+                    android:text="@string/Next"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12ssp" />
             </androidx.cardview.widget.CardView>
