--- a/app/src/main/res/layout/activity_business_tracker_account.xml
+++ b/app/src/main/res/layout/activity_business_tracker_account.xml
@@ -526,7 +526,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:id="@+id/addBankIncompleteLL"
@@ -701,7 +702,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="@dimen/_5sdp"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:text="@string/merchant_s_agreement"
+                                android:text="@string/cp_agreements"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_12ssp" />
 
