--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -1256,7 +1256,8 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:paddingTop="@dimen/_11sdp"
-                        android:paddingBottom="@dimen/_11sdp">
+                        android:paddingBottom="@dimen/_11sdp"
+                        android:visibility="gone">
 
                         <TextView
                             android:layout_width="wrap_content"
