--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -389,7 +389,7 @@
                             android:layout_marginTop="@dimen/_16sdp"
                             android:layout_marginEnd="1dp"
                             android:layout_marginBottom="1dp"
-                            android:visibility="gone"
+                            android:visibility="visible"
                             app:cardBackgroundColor="@color/white"
                             app:cardCornerRadius="@dimen/_10sdp">
 
@@ -489,7 +489,7 @@
                             android:layout_marginTop="@dimen/_16sdp"
                             android:layout_marginEnd="1dp"
                             android:layout_marginBottom="1dp"
-                            android:visibility="gone"
+                            android:visibility="visible"
                             app:cardBackgroundColor="@color/white"
                             app:cardCornerRadius="@dimen/_10sdp">
 
