--- a/app/src/main/res/layout/activity_review_merchant_agreement.xml
+++ b/app/src/main/res/layout/activity_review_merchant_agreement.xml
@@ -41,10 +41,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_40sdp"
+                android:layout_weight="1"
                 android:fontFamily="@font/opensans_semibold"
                 android:gravity="center"
                 android:text="Application Disclosure"
-                android:layout_weight="1"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_11ssp" />
 
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/_17sdp"
                 android:src="@drawable/ic_options"
-                android:visibility="invisible"/>
+                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
@@ -71,8 +71,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_5sdp"
                 android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_5sdp"
                 android:layout_marginBottom="@dimen/_8sdp"
                 android:src="@drawable/ic_info_sign" />
 
@@ -82,8 +82,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_9sdp"
                 android:layout_weight="1"
-                android:text="@string/application_desclosure_description"
                 android:fontFamily="@font/opensans_regular"
+                android:text="@string/application_desclosure_description"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_10ssp" />
         </LinearLayout>
@@ -96,23 +96,38 @@
             android:background="@color/white"
             android:backgroundTint="@color/white"
             android:nestedScrollingEnabled="true"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:paddingHorizontal="@dimen/_21sdp">
+
+            <TextView
+                android:id="@+id/disclosureContentTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_regular"
+                android:text="@string/application_desclosure_description"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_12ssp" />
+        </ScrollView>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="@dimen/_5sdp"
-            android:paddingTop="@dimen/_10sdp">
+            android:paddingTop="@dimen/_10sdp"
+            android:paddingBottom="@dimen/_5sdp">
 
             <LinearLayout
                 android:id="@+id/signatureEditLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/round_corner"
                 android:layout_marginHorizontal="@dimen/_11sdp"
                 android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@drawable/round_corner"
                 android:orientation="vertical"
                 android:padding="@dimen/_10sdp">
 
